// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should get ninjas from a teams 1`] = `
Array [
  Object {
    "academyGradAge": null,
    "birthdate": "7 de Julho",
    "bloodType": null,
    "chuninPromAge": null,
    "id": 17,
    "name": "Akamaru",
    "ninjaRegistration": null,
    "sex": "Masculino",
    "specie": "Humano",
    "status": null,
  },
  Object {
    "academyGradAge": "12",
    "birthdate": "1 de Maio",
    "bloodType": "B",
    "chuninPromAge": "14",
    "id": 108,
    "name": "Chōji Akimichi",
    "ninjaRegistration": "012625",
    "sex": "Masculino",
    "specie": "Humano",
    "status": "Vivo",
  },
  Object {
    "academyGradAge": "12 Anos",
    "birthdate": "27 de Dezembro",
    "bloodType": "A",
    "chuninPromAge": "14 anos",
    "id": 380,
    "name": "Hinata Hyūga",
    "ninjaRegistration": "012612",
    "sex": "Feminino",
    "specie": "Humano",
    "status": null,
  },
  Object {
    "academyGradAge": "12 anos",
    "birthdate": "23 de Setembro",
    "bloodType": "B",
    "chuninPromAge": "14 anos",
    "id": 423,
    "name": "Ino Yamanaka",
    "ninjaRegistration": "012604",
    "sex": "Feminino",
    "specie": "Humano",
    "status": null,
  },
  Object {
    "academyGradAge": "12",
    "birthdate": "7 de Julho",
    "bloodType": "B",
    "chuninPromAge": "14",
    "id": 549,
    "name": "Kiba Inuzuka",
    "ninjaRegistration": null,
    "sex": "Masculino",
    "specie": "Humano",
    "status": null,
  },
  Object {
    "academyGradAge": "12",
    "birthdate": "10 de outubro",
    "bloodType": "B",
    "chuninPromAge": null,
    "id": 802,
    "name": "Naruto Uzumaki",
    "ninjaRegistration": "012607",
    "sex": "Masculino",
    "specie": "Humano",
    "status": "Incapacitado Boruto",
  },
  Object {
    "academyGradAge": "12",
    "birthdate": "3 de julho",
    "bloodType": "O",
    "chuninPromAge": "15",
    "id": 809,
    "name": "Neji Hyūga",
    "ninjaRegistration": "012587",
    "sex": "Masculino",
    "specie": "Humano",
    "status": "Morto",
  },
  Object {
    "academyGradAge": "12",
    "birthdate": "27 de novembro",
    "bloodType": "A",
    "chuninPromAge": "15",
    "id": 908,
    "name": "Rock Lee",
    "ninjaRegistration": "012561",
    "sex": "Masculino",
    "specie": "Humano",
    "status": null,
  },
  Object {
    "academyGradAge": "12",
    "birthdate": "28 de marco",
    "bloodType": "O",
    "chuninPromAge": "14",
    "id": 946,
    "name": "Sakura Haruno",
    "ninjaRegistration": "012601",
    "sex": "Feminino",
    "specie": "Humano",
    "status": null,
  },
  Object {
    "academyGradAge": "12",
    "birthdate": "22 de Setembro",
    "bloodType": "AB",
    "chuninPromAge": "12",
    "id": 1007,
    "name": "Shikamaru Nara",
    "ninjaRegistration": "012611",
    "sex": "Masculino",
    "specie": "Humano",
    "status": null,
  },
  Object {
    "academyGradAge": "12",
    "birthdate": "23 de janeiro",
    "bloodType": "AB",
    "chuninPromAge": "14",
    "id": 1024,
    "name": "Shino Aburame",
    "ninjaRegistration": "012618",
    "sex": "Masculino",
    "specie": "Humano",
    "status": null,
  },
  Object {
    "academyGradAge": "12",
    "birthdate": "9 de marco",
    "bloodType": "B",
    "chuninPromAge": "15",
    "id": 1124,
    "name": "Tenten",
    "ninjaRegistration": "012573",
    "sex": "Feminino",
    "specie": "Humano",
    "status": null,
  },
]
`;

exports[`should get teams 1`] = `
Array [
  Object {
    "description": "Os 11 de Konoha (木ノ葉の11人, Konoha no Jūichinin, TV Brasileira: 11 da Folha) é o apelido coletivo de quatro times de Genin de Konoha, liderados por Kakashi Hatake, Asuma Sarutobi, Kurenai Yūhi e Might Guy respectivamente, com exceção de Sasuke Uchiha.",
    "id": 1,
    "name": "11 de Konoha",
  },
  Object {
    "description": "Técnica de Selamento: Nove Dragões de Espectro dos Selos Consumidores",
    "id": 2,
    "name": "Akatsuki",
  },
  Object {
    "description": "A Aliança Armamentista Ryūha (龍波武装同盟, Ryūha Busō Dōmei) é uma organização formada no País das Ondas após a Quarta Guerra Mundial Ninja. Seguindo o exemplo estabelecido por Madara Uchiha, a Aliança Armamentista visa libertar o mundo da influência corruptora do dinheiro. O grupo é formado por nukenin de alto nível.",
    "id": 3,
    "name": "Aliança Armamentista Ryūha",
  },
  Object {
    "description": "A Anbu da Folha são liderados por Shinga. Eles são os principais antagonistas em Naruto Shippūden: Ultimate Ninja Heroes 3, com o objetivo de dominar o mundo.",
    "id": 4,
    "name": "Anbu da Folha",
  },
  Object {
    "description": "Os Bandidos Mujina (貉強盗団, Mujina Gōtōdan) são um grupo de ninjas fugitivos de vários países, incluindo de Konohagakure e Kirigakure. Tem como seu líder Shojoji, embora os demais membros sejam, até a data atual, desconhecidos.",
    "id": 5,
    "name": "Bandidos Mujina",
  },
  Object {
    "description": "A Brigada de Marionetes de Sunagakure (傀儡部隊, Kugutsu Butai) é mencionada por Kankurō após sua batalha com Sasori e logo após a morte de Chiyo. Não se sabe muito sobre esta organização, além do fato de que ela era ativa durante a Segunda e possivelmente, a Terceira Guerra Mundial Shinobi. Foi presumivelmente composta por titereiros de elite de Suna. Sasori foi anotado por ter criado muitas marionetes que foram usados ​​pela brigada.",
    "id": 6,
    "name": "Brigada de Marionetes",
  },
  Object {
    "description": "Haido liderou um grupo de cavaleiros para realizarem seu sonho de conquistar o mundo (ou, em palavras do próprio grupo militar, criando uma utopia livre da guerra).",
    "id": 7,
    "name": "Cavaleiros de Haido",
  },
  Object {
    "description": "Lariat Bomba Liger dos Dois Pelotões (Apenas Game)",
    "id": 8,
    "name": "Combo A–B",
  },
  Object {
    "description": "O Conselho de Iwa (岩ご意見番, Iwa Goikenban) é uma assembléia de anciãos de Iwagakure e outras mais proeminentes figuras, feita a fim de finalizar as decisões relativas à sua aldeia. O conselho foi convocado para discutir questões como tratados de paz durante a Terceira Guerra Mundial Shinobi, e participação de seu vilarejo nos combinados Exames Chūnin.",
    "id": 9,
    "name": "Conselho de Iwa",
  },
  Object {
    "description": "O Conselho de Konoha (木ノ葉ご意見番, Konoha Goikenban) existe para ajudar o Hokage a governar a vila e garantir que todas as decisões são feitas com o melhor interesse em ajudar Konoha e seus habitantes. O conselho pode ser composto por até três membros. Atualmente, é composto por Homura Mitokado e Koharu Utatane.",
    "id": 10,
    "name": "Conselho de Konoha",
  },
  Object {
    "description": "O Conselho de Kumo (雲ご意見番, Kumo Goikenban) é uma assembléia presidida pelo Raikage, que consiste de shinobi de classificações altas e proeminentes de Kumogakure, os quais se reúnem para discutir as estratégias e táticas relativas à aldeia.",
    "id": 11,
    "name": "Conselho de Kumo",
  },
  Object {
    "description": "O Conselho de Suna (砂ご意見番, Suna Goikenban) existe para ajudar o Kazekage a governar a vila e para garantir que todas as decisões são tomadas com o melhor interesse da aldeia e seus habitantes. O conselho parece ser constituído por doze membros, com muitos deles sendo velhos anciões. As discussões ocorrem no Gabinete do Kazekage, na sala onde as estátuas de todos os Kazekage residem.",
    "id": 12,
    "name": "Conselho de Suna",
  },
  Object {
    "description": "O Corpo Médico (医療部隊, Iryō Butai) é uma subdivisão da organização de ninjas médicos e do hospital de Konohagakure. Estes shinobi geralmente trabalham no hospital em tempo integral, e seus papéis são semelhantes aos ninjas médicos de campo em que eles são implantados para ajudar os companheiros que estão em missões. No entanto, ao contrário do ninja médico de campo que normalmente são atribuídos a um time para servir nessa capacidade, como Sakura Haruno, por exemplo, eles se movem como um time independente composto exclusivamente por ninjas médicos.",
    "id": 13,
    "name": "Corpo Médico",
  },
  Object {
    "description": null,
    "id": 14,
    "name": "Corpo Médico de Konoha",
  },
  Object {
    "description": "O Corpo de Explosão é uma organização de Iwagakure. Não se sabe muito sobre esta organização, com exceção de que tanto Deidara como Gari eram membros desta organização, ambos os quais eram capazes de usar a kekkei genkai Liberação de Explosão.",
    "id": 15,
    "name": "Corpo de Explosão",
  },
]
`;

exports[`should paginate teams 1`] = `
Array [
  Object {
    "description": "Técnica de Selamento: Nove Dragões de Espectro dos Selos Consumidores",
    "id": 2,
    "name": "Akatsuki",
  },
  Object {
    "description": "A Aliança Armamentista Ryūha (龍波武装同盟, Ryūha Busō Dōmei) é uma organização formada no País das Ondas após a Quarta Guerra Mundial Ninja. Seguindo o exemplo estabelecido por Madara Uchiha, a Aliança Armamentista visa libertar o mundo da influência corruptora do dinheiro. O grupo é formado por nukenin de alto nível.",
    "id": 3,
    "name": "Aliança Armamentista Ryūha",
  },
  Object {
    "description": "A Anbu da Folha são liderados por Shinga. Eles são os principais antagonistas em Naruto Shippūden: Ultimate Ninja Heroes 3, com o objetivo de dominar o mundo.",
    "id": 4,
    "name": "Anbu da Folha",
  },
  Object {
    "description": "Os Bandidos Mujina (貉強盗団, Mujina Gōtōdan) são um grupo de ninjas fugitivos de vários países, incluindo de Konohagakure e Kirigakure. Tem como seu líder Shojoji, embora os demais membros sejam, até a data atual, desconhecidos.",
    "id": 5,
    "name": "Bandidos Mujina",
  },
  Object {
    "description": "A Brigada de Marionetes de Sunagakure (傀儡部隊, Kugutsu Butai) é mencionada por Kankurō após sua batalha com Sasori e logo após a morte de Chiyo. Não se sabe muito sobre esta organização, além do fato de que ela era ativa durante a Segunda e possivelmente, a Terceira Guerra Mundial Shinobi. Foi presumivelmente composta por titereiros de elite de Suna. Sasori foi anotado por ter criado muitas marionetes que foram usados ​​pela brigada.",
    "id": 6,
    "name": "Brigada de Marionetes",
  },
  Object {
    "description": "Haido liderou um grupo de cavaleiros para realizarem seu sonho de conquistar o mundo (ou, em palavras do próprio grupo militar, criando uma utopia livre da guerra).",
    "id": 7,
    "name": "Cavaleiros de Haido",
  },
  Object {
    "description": "Lariat Bomba Liger dos Dois Pelotões (Apenas Game)",
    "id": 8,
    "name": "Combo A–B",
  },
  Object {
    "description": "O Conselho de Iwa (岩ご意見番, Iwa Goikenban) é uma assembléia de anciãos de Iwagakure e outras mais proeminentes figuras, feita a fim de finalizar as decisões relativas à sua aldeia. O conselho foi convocado para discutir questões como tratados de paz durante a Terceira Guerra Mundial Shinobi, e participação de seu vilarejo nos combinados Exames Chūnin.",
    "id": 9,
    "name": "Conselho de Iwa",
  },
  Object {
    "description": "O Conselho de Konoha (木ノ葉ご意見番, Konoha Goikenban) existe para ajudar o Hokage a governar a vila e garantir que todas as decisões são feitas com o melhor interesse em ajudar Konoha e seus habitantes. O conselho pode ser composto por até três membros. Atualmente, é composto por Homura Mitokado e Koharu Utatane.",
    "id": 10,
    "name": "Conselho de Konoha",
  },
  Object {
    "description": "O Conselho de Kumo (雲ご意見番, Kumo Goikenban) é uma assembléia presidida pelo Raikage, que consiste de shinobi de classificações altas e proeminentes de Kumogakure, os quais se reúnem para discutir as estratégias e táticas relativas à aldeia.",
    "id": 11,
    "name": "Conselho de Kumo",
  },
  Object {
    "description": "O Conselho de Suna (砂ご意見番, Suna Goikenban) existe para ajudar o Kazekage a governar a vila e para garantir que todas as decisões são tomadas com o melhor interesse da aldeia e seus habitantes. O conselho parece ser constituído por doze membros, com muitos deles sendo velhos anciões. As discussões ocorrem no Gabinete do Kazekage, na sala onde as estátuas de todos os Kazekage residem.",
    "id": 12,
    "name": "Conselho de Suna",
  },
  Object {
    "description": "O Corpo Médico (医療部隊, Iryō Butai) é uma subdivisão da organização de ninjas médicos e do hospital de Konohagakure. Estes shinobi geralmente trabalham no hospital em tempo integral, e seus papéis são semelhantes aos ninjas médicos de campo em que eles são implantados para ajudar os companheiros que estão em missões. No entanto, ao contrário do ninja médico de campo que normalmente são atribuídos a um time para servir nessa capacidade, como Sakura Haruno, por exemplo, eles se movem como um time independente composto exclusivamente por ninjas médicos.",
    "id": 13,
    "name": "Corpo Médico",
  },
  Object {
    "description": null,
    "id": 14,
    "name": "Corpo Médico de Konoha",
  },
  Object {
    "description": "O Corpo de Explosão é uma organização de Iwagakure. Não se sabe muito sobre esta organização, com exceção de que tanto Deidara como Gari eram membros desta organização, ambos os quais eram capazes de usar a kekkei genkai Liberação de Explosão.",
    "id": 15,
    "name": "Corpo de Explosão",
  },
  Object {
    "description": "A Divisão Contra Terrorismo (カウン夕ーテロ部門, Kauntā Tero Bumon) é uma equipe de shinobi de Sunagakure de nível chūnin e jōnin liderada por Kankurō, encarregada de localizar e prender criminosos procurados, que estão listados no Livro Bingo.",
    "id": 16,
    "name": "Divisão Contra Terrorismo",
  },
]
`;
